# Swone

./: .buildconfig  .clang-format  .editorconfig  .gitattributes  .gitignore  README.md  STRUCTURE.txt  meson.build  run.sh  swone.sh
bib/: embed.c
bib/TimeSync/: README.md
bib/md5/: README.md
include/: Eventable.h  Handleable.h  Updateable.h
res/: settings.ini  tile.png~
res/map/: bsp.map  sum.map
res/player/: player.swone
res/scenery/: game1  game2
res/scn/: game1
source/: Controller.cpp  Controller.h  GameMenu.cpp  GameMenu.h  GamePanel.cpp  GamePanel.h  MainMenu.cpp  MainMenu.h  Mainmenu.cpp  Settings.cpp  Settings.h  main.cpp
source/client/: Client.cpp  Client.h  Controller.cpp  Controller.h  GameMenu.cpp  GameMenu.h  GameWindow.cpp  GameWindow.h  MainMenu.cpp  MainMenu.h  Settings.cpp  Settings.h
source/client/game/: CharacterSelection.cpp  CharacterSelection.h  ClientGameController.cpp  ClientGameController.h  GameWindow.cpp  GameWindow.h  InfoPanel.cpp  InfoPanel.h  MapDrawing.cpp  MapDrawing.h  NetController.cpp  NetController.h
source/client/game/object/: ExtensionDrawing.h  GameObjectDrawing.cpp  GameObjectDrawing.h
source/client/game/object/extensions/: InventoryDrawing.cpp  InventoryDrawing.h
source/client/menu/: LocalMenu.cpp  LocalMenu.h  MainMenu.cpp  MainMenu.h  OnlineMenu.cpp  OnlineMenu.h  SettingsMenu.cpp  SettingsMenu.h
source/game/: GameController.cpp  GameController.h  GameObject.cpp  GameObject.h  GameReader.cpp  GameReader.h  GameWindow.cpp  GameWindow.h  Map.cpp  Map.h  MapReader.cpp  MapReader.h  Net.cpp  Net.h  Player.cpp  Player.h  Scenery.cpp  Scenery.h
source/game/object/: Extension.h  GameObject.cpp  GameObject.h
source/game/object/extensions/: Gravity.cpp  Gravity.h  Inventory.cpp  Inventory.h  KickUp.cpp  KickUp.h  MovementX.cpp  MovementX.h  MultiJump.cpp  MultiJump.h  OrientCorrection.cpp  OrientCorrection.h
source/graphics/: AnimatedSprite.cpp  AnimatedSprite.h  Animation.cpp  Animation.h  ParticleSystem.cpp  ParticleSystem.h
source/physics/: Body.cpp  Body.h  Collision.cpp  Collision.h  IEMath.h  Manifold.cpp  Manifold.h  Precompiled.h  Scene.cpp  Scene.h  Shape.h
source/server/: Lobby.cpp  Lobby.h  Player.cpp  Player.h  Server.cpp  Server.h  SrvSettings.cpp  SrvSettings.h
source/util/: Helper.cpp  Helper.h  Log.cpp  Log.h  embedded_data.cpp
source/util/reader/: MapReader.cpp  MapReader.h  Reader.cpp  Reader.h
